[tool.poetry]
name = "repovul"
version = "0.1.0"
description = ""
authors = ["Timothee Chauvin <timothee.chauvin28@gmail.com>"]
readme = "README.md"
packages = [{ include = "repovul" }]

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.6.0"
requests = "^2.31.0"

[tool.poetry.scripts]
rv = "repovul.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
force-wrap = true
pre-summary-newline = true

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "fire.*"
ignore_missing_imports = true
